# oop-labs

./: CMakeLists.txt  README.md
cmake/: code-coverage.cmake
lab_1/: CMakeLists.txt  devowel.cpp  devowel.h  devowel_test.cpp  main.cpp
lab_2/: CMakeLists.txt  five.cpp  five.hpp  five_tests.cpp  main.cpp
lab_3/: CMakeLists.txt  array.cpp  array.hpp  figure.cpp  figure.hpp  figures_tests.cpp  hexagon.cpp  hexagon.hpp  main.cpp  octagon.cpp  octagon.hpp  pentagon.cpp  pentagon.hpp
lab_4/: CMakeLists.txt  array.hpp  figure.hpp  figures_tests.cpp  hexagon.hpp  main.cpp  octagon.hpp  pentagon.hpp
lab_5/: CMakeLists.txt  allocator.hpp  allocator_tests.cpp  main.cpp  vector.hpp
lab_6/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp  npc.cpp  npc.hpp  tests.cpp
lab_7/: CMakeLists.txt  editor.cpp  editor.hpp  main.cpp  map.hpp  npc.cpp  npc.hpp  npc.txt  print.hpp
test/: README.md  devowel_test.cpp  main.cpp
